[gd_scene load_steps=6 format=2]

[ext_resource path="res://ndh-assets/UI/HUD/portraits/werewolf/default.png" type="Texture" id=1]
[ext_resource path="res://ndh-assets/UI/HUD/doomface/doomface_background.png" type="Texture" id=2]
[ext_resource path="res://src/UI/PlayerOverlay.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/blood_red_bar.png" type="Texture" id=4]
[ext_resource path="res://ndh-assets/UI/HUD/doomface/doomface_frame.png" type="Texture" id=5]

[node name="PlayerOverlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 24
custom_constants/margin_top = 24
custom_constants/margin_left = 24
custom_constants/margin_bottom = 22
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUDVBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 24.0
margin_top = 24.0
margin_right = 1000.0
margin_bottom = 578.0
mouse_filter = 2
size_flags_horizontal = 9
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HUDVBox"]
margin_top = 462.0
margin_right = 976.0
margin_bottom = 554.0
rect_min_size = Vector2( 0, 92 )
mouse_filter = 2

[node name="BackgroundRect" type="TextureRect" parent="MarginContainer/HUDVBox/HBoxContainer"]
margin_right = 102.0
margin_bottom = 92.0
rect_min_size = Vector2( 102, 0 )
mouse_filter = 2
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="MarginContainer/HUDVBox/HBoxContainer/BackgroundRect"]
margin_left = 89.0
margin_top = 9.0
margin_right = 99.0
margin_bottom = 85.0
mouse_filter = 2
value = 100.0
texture_progress = ExtResource( 4 )
fill_mode = 3
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrameRect" type="TextureRect" parent="MarginContainer/HUDVBox/HBoxContainer/BackgroundRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.397514
margin_right = 0.397514
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FaceRect" type="TextureRect" parent="MarginContainer/HUDVBox/HBoxContainer/BackgroundRect/FrameRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 9.0
margin_bottom = -9.0
rect_min_size = Vector2( 75, 0 )
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}
